@@ -3,6 +3,8 @@
 * Bug fix
   * Strip encoding comment from input to avoid overriding file comment.  Bug
     #22113 by James Gray.
+  * Restore call-seq parsing behavior when the call-seq is the only comment.
+    Bug #26290 by Sylvain Joyeux.
 
 === 3.0.1 / 2010-12-19
 
